k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-sqlite-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-sqlite-api
  template:
    metadata:
      labels:
        app: flask-sqlite-api
    spec:
      containers:
        - name: flask-sqlite-api
          image: flask-sqlite-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 128Mi
      serviceAccountName: flask-api-sa
