k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-sqlite-api
spec:
  type: NodePort
  selector:
    app: flask-sqlite-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30001
